--- a/Save Me/app/build.gradle
+++ b/Save Me/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.github.clans:fab:1.6.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
