--- a/Save Me/app/build.gradle
+++ b/Save Me/app/build.gradle
@@ -33,7 +33,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'com.github.clans:fab:1.6.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //nav
+    implementation 'com.google.android.material:material:1.1.0'
+    //floating button
+    implementation 'com.github.clans:fab:1.6.4'
+    //dialog
+    implementation 'com.github.mejdi14:Flat-Dialog-Android:1.0.4'
 }
