--- a/Save Me/app/build.gradle
+++ b/Save Me/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     //floating button
     implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.github.QuadFlask:FloatingActionMenu:0.0.1@aar'
     //dialog
     implementation project(path: ':flatdialoglibrary')
+    //permissions
+    implementation 'ru.superjob:kotlin-permissions:1.0.3'
 }
