--- a/Save Me 2/app/build.gradle
+++ b/Save Me 2/app/build.gradle
@@ -31,7 +31,20 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //nav
+    implementation 'com.google.android.material:material:1.1.0'
+    //floating button
+    implementation 'com.github.clans:fab:1.6.4'
+    //dialog
+    implementation project(path: ':flatdialoglibrary')
+    //permissions
+    implementation 'ru.superjob:kotlin-permissions:1.0.3'
+    //cricle imageview
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //explain layout
+    implementation "com.github.skydoves:expandablelayout:1.0.5"
 }
