--- a/Save Me 2/app/build.gradle
+++ b/Save Me 2/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -32,6 +33,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -47,4 +50,11 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //explain layout
     implementation "com.github.skydoves:expandablelayout:1.0.5"
+    //ColorPicker
+    implementation 'com.github.dhaval2404:colorpicker:1.1'
+    //Recyclerview
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //fire base
+    implementation 'com.google.firebase:firebase-analytics:17.3.0'
 }
